Closed Bug 1699626 Opened 5 years ago Closed 5 years ago

High frequency Fission browser/base/content/test/about/browser_bug633691.js | leaked 2 window(s) until shutdown [url = data:text/html,<iframe width='700' height='700'></iframe>]

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Fission Milestone M7a
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- unaffected
firefox88 --- disabled
firefox89 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: nika)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [retriggered][stockwell unknown])

Attachments

(1 file)

Filed by: nerli [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=333743379&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/XAi6meZxQfqbgu_1k0pPrQ/runs/0/artifacts/public/logs/live_backing.log


[task 2021-03-19T05:12:15.061Z] 05:12:15     INFO - TEST-START | Shutdown

[task 2021-03-19T05:12:18.379Z] 05:12:18     INFO - TEST-INFO | Main app process: exit 0
[task 2021-03-19T05:12:18.380Z] 05:12:18     INFO - TEST-INFO | Confirming we saw 257 DOCSHELL created and 257 destroyed log strings.
[task 2021-03-19T05:12:18.381Z] 05:12:18     INFO - TEST-INFO | Confirming we saw 717 DOMWINDOW created and 717 destroyed log strings.
[task 2021-03-19T05:12:18.382Z] 05:12:18    ERROR - TEST-UNEXPECTED-FAIL | browser/base/content/test/about/browser_bug633691.js | leaked 2 window(s) until shutdown [url = data:text/html,<iframe width='700' height='700'></iframe>]
[task 2021-03-19T05:12:18.383Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_bug633691.js | windows(s) leaked: [pid = 4643] [serial = 1], [pid = 4643] [serial = 3]
[task 2021-03-19T05:12:18.384Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_bug633691.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.385Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_bug633691.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.386Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.387Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.388Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_clockSkew.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.389Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_clockSkew.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.390Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_exception.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.390Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_exception.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.391Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_mitm.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.392Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_mitm.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.393Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_multiple_errors.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.394Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_multiple_errors.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.395Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_noSubjectAltName.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.396Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_noSubjectAltName.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.397Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_telemetry.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.398Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_telemetry.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.399Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutDialog_distribution.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.403Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutDialog_distribution.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.404Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_POST.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.405Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_POST.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.405Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_composing.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.406Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_composing.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.407Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_searchbar.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.408Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_searchbar.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.409Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_telemetry.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.410Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_telemetry.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.411Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNetError.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.411Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNetError.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.412Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNetError_csp_iframe.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.415Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNetError_csp_iframe.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.416Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNetError_xfo_iframe.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.417Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNetError_xfo_iframe.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.417Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNewTab_bookmarksToolbar.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.419Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNewTab_bookmarksToolbar.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.420Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNewTab_bookmarksToolbarEmpty.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.420Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNewTab_bookmarksToolbarEmpty.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.421Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNewTab_bookmarksToolbarNewWindow.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.422Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNewTab_bookmarksToolbarNewWindow.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.423Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNewTab_bookmarksToolbarPrefs.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.424Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNewTab_bookmarksToolbarPrefs.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.425Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutStopReload.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.426Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutStopReload.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.427Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutSupport.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.428Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutSupport.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.428Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutSupport_newtab_security_state.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.429Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_aboutSupport_newtab_security_state.js | This test created 1 hidden docshell(s)
[task 2021-03-19T05:12:18.430Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_bug435325.js | This test created 1 hidden window(s)
[task 2021-03-19T05:12:18.431Z] 05:12:18     INFO - TEST-INFO | browser/base/content/test/about/browser_bug435325.js | This test created 1 hidden docshell(s)```

The Bugbug bot thinks this bug should belong to the 'Core::DOM: Navigation' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: General → DOM: Navigation
Product: Firefox → Core

Is this a regression from bug 1675820 (and same question for bug 1699628)?

Severity: S4 → --
Flags: needinfo?(nika)
Priority: P5 → --
See Also: → 1699628
Summary: High frequency browser/base/content/test/about/browser_bug633691.js | leaked 2 window(s) until shutdown [url = data:text/html,<iframe width='700' height='700'></iframe>] → High frequency Fission browser/base/content/test/about/browser_bug633691.js | leaked 2 window(s) until shutdown [url = data:text/html,<iframe width='700' height='700'></iframe>]
See Also: → 1699651

There's a chance it could be. That patch needed to fix a number of leaks which were exposed because of some changes to how windows and documents are torn down, and could easily make existing leaks which previously wouldn't have been caught here be reported as leaking certain objects could now also cause the window to appear as leaked

Continued the backfills from Comment 1, they point to Bug 1675820 being the cause of these failures.

Whiteboard: [retriggered]

There are 39 total failures in the last 7 days on linux1804-64 debug
Recent failure log: https://treeherder.mozilla.org/logviewer?job_id=333912490&repo=mozilla-central&lineNumber=6279

[task 2021-03-21T10:12:19.346Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 6 (7f7b5de93800) [pid = 1864] [serial = 15] [outer = 0] [url = about:blank]
[task 2021-03-21T10:12:19.347Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 5 (7f7b670fe580) [pid = 1864] [serial = 3] [outer = 0] [url = chrome://extensions/content/dummy.xhtml]
[task 2021-03-21T10:12:19.347Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 4 (7f7b65c8cc00) [pid = 1864] [serial = 4] [outer = 0] [url = chrome://extensions/content/dummy.xhtml]
[task 2021-03-21T10:12:19.348Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 3 (7f7b8a36d200) [pid = 1864] [serial = 7] [outer = 0] [url = resource://gre-resources/hiddenWindow.html]
[task 2021-03-21T10:12:19.350Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 2 (7f7b670fe900) [pid = 1864] [serial = 5] [outer = 0] [url = about:blank]
[task 2021-03-21T10:12:19.350Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 1 (7f7b40a80400) [pid = 1864] [serial = 102] [outer = 0] [url = about:blank]
[task 2021-03-21T10:12:19.357Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 0 (7f7b60323c00) [pid = 1864] [serial = 9] [outer = 0] [url = resource://gre-resources/hiddenWindow.html]
[task 2021-03-21T10:12:19.373Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3365
[task 2021-03-21T10:12:19.457Z] 10:12:19 INFO - GECKO(1864) | [Parent 1864, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4442
[task 2021-03-21T10:12:19.497Z] 10:12:19 INFO - TEST-INFO | Main app process: exit 0
[task 2021-03-21T10:12:19.497Z] 10:12:19 INFO - TEST-INFO | Confirming we saw 257 DOCSHELL created and 257 destroyed log strings.
[task 2021-03-21T10:12:19.497Z] 10:12:19 INFO - TEST-INFO | Confirming we saw 717 DOMWINDOW created and 717 destroyed log strings.
[task 2021-03-21T10:12:19.497Z] 10:12:19 ERROR - TEST-UNEXPECTED-FAIL | browser/base/content/test/about/browser_bug633691.js | leaked 2 window(s) until shutdown [url = data:text/html,<iframe width='700' height='700'></iframe>]
[task 2021-03-21T10:12:19.497Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_bug633691.js | windows(s) leaked: [pid = 4583] [serial = 1], [pid = 4583] [serial = 3]
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_bug633691.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_bug633691.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_clockSkew.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_clockSkew.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_exception.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_exception.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_mitm.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_mitm.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_multiple_errors.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_multiple_errors.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.498Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_noSubjectAltName.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_noSubjectAltName.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_telemetry.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutCertError_telemetry.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutDialog_distribution.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutDialog_distribution.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_POST.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_POST.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_composing.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_composing.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_searchbar.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_searchbar.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_telemetry.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutHome_search_telemetry.js | This test created 1 hidden docshell(s)
[task 2021-03-21T10:12:19.499Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNetError.js | This test created 1 hidden window(s)
[task 2021-03-21T10:12:19.500Z] 10:12:19 INFO - TEST-INFO | browser/base/content/test/about/browser_aboutNetError.js | This test created 1 hidden docshell(s)

Whiteboard: [retriggered] → [retriggered][stockwell needswork:owner]
Regressed by: 1675820
Has Regression Range: --- → yes
Keywords: regression

Going to try to look into this soon, as it seems to be occurring quite frequently. May end up landing a band-aid fix for now.

Assignee: nobody → nika
Flags: needinfo?(nika)

Fission M7a

Nika says this is probably an existing leak that became more reproducible after her fix in bug 1675820 landed.

Bug 1699628 and bug 1699651 are probably dupes of this bug, but TBD.

Severity: -- → S3
Fission Milestone: --- → M7a
Priority: -- → P2

Theoretically this change shouldn't be necessary, however frequent
intermittents suggest that there are still cases where holding a strong
reference here can lead to memory leaks.

Set release status flags based on info from the regressing bug 1675820

Pushed by nlayzell@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/228d6b490775 Downgrade mWindowGlobalChild to a weak pointer, r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: