Bug 1699626 - Downgrade mWindowGlobalChild to a weak pointer, r=smaug

Theoretically this change shouldn't be necessary, however frequent
intermittents suggest that there are still cases where holding a strong
reference here can lead to memory leaks.

Differential Revision: https://phabricator.services.mozilla.com/D109445